# FinalProject

./: .coverage  DataAnalisys.ipynb  Metadata_Release_Anon.csv  Updated_Metadata_Release_Anon.csv  avg_time_to_success.csv  pyproject.toml  readme.md  requirements.txt  success_rates_by_year.csv  success_rates_children_vs_adults.csv  summary of the findings.docx
data/: Metadata_Release_Anon.csv  Updated_Metadata_Release_Anon.csv  avg_time_to_success.csv  success_rates_by_year.csv  success_rates_children_vs_adults.csv
results/: summary of the findings.docx
src/: DataAnalisys.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: _init_.py  test_analysis.py
