[build-system]
requires = [
    "setuptools>=68",
    "setuptools_scm[toml]>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "epilepsy_analysis"
version = "0.1.0"
requires-python = ">=3.9"
description = "A project for analyzing epilepsy-related success rates and trends."

readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ohad Pal", email = "shaharpal9@gmail.com" }
]
keywords = ["epilepsy", "data analysis", "success rates", "ANOVA"]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "coverage[toml]>=6.0.0",
    "ruff>=0.0.285",
    "tox>=4.5.2"
]
lint = [
    "ruff>=0.0.285"
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
extend-exclude = [
    "conf.py"
]
target-version = ["py39"]

[tool.ruff.per-file-ignores]
"**/tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # No need to doc this file
]

[tool.mypy]
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "venv.*",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=html --disable-warnings"
testpaths = ["tests"]
